# eixam

./: .gitignore  CMakeLists.txt
eixam-bash/: main.cpp
script/: job.lua
src/: Algorithm.hpp  IPC.hpp  Network.cpp  Network.hpp  Resources.cpp  Resources.hpp  Script.cpp  Script.hpp  Server.hpp  Sever.cpp  extern.hpp  main.cpp
